--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,5 +13,5 @@ author_profile: true
 
 
 {% for post in site.publications reversed %}
-  {% include archive-single-pub.html %}
+  {% include archive-single.html %}
 {% endfor %}
